tdf#151842: Revert "Connect new import / export to starmath"

Will create a unittest in a follow-up commit

This reverts commit 9b7600f547cec9ed1bacca3a1b995b3c33fd5723.

Change-Id: I10b28c3ae15f60da41a16136f3969ed6917d8a93
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143534
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>